--- a/src/SinglePlay/single.css
+++ b/src/SinglePlay/single.css
@@ -46,8 +46,10 @@ button:hover {
 
 .computer img,
 .player img {
+  justify-content: space-around;
   max-width: 100%;
-  height: auto;
+  width: 200px; /* Adjust the desired size for the images */
+  height: 100px; /* Adjust the desired size for the images */
 }
 
 .box {
@@ -72,12 +74,100 @@ button:hover {
   justify-content: center;
 }
 
-button[type="button"] {
+.button {
   width: 40px;
   height: 40px;
   margin: 0 5px;
   font-size: 18px;
-  border-radius: 50%;
+  border-radius: 10%;
+}
+
+.bttn1{
+  background-color: transparent;
+  background-image: url("../images/Player.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 2.1vh;
+  height: 8vh;
+  width: 5vh;
+  
+}
+.bttn2{
+  background-color: transparent;
+  background-image: url("../images/Player.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 8vh;
+  width: 5vh;
+  
+}
+.bttn3{
+  background-color: transparent;
+  background-image: url("../images/Player.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 8vh;
+  width: 5vh;
+  
+}
+.bttn4{
+  background-color: transparent;
+  background-image: url("../images/Player.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 8vh;
+  width: 5vh;
+  
+}
+.bttn5{
+  background-color: transparent;
+  background-image: url("../images/Player.png");
+  background-repeat: no-repeat;
+  background-position: center ;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+  height: 8vh;
+  width: 5vh;
+  
+}
+.bttn6{
+  background-color: transparent;
+  background-image: url("../images/Player.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 8vh;
+  width: 5vh;
+  
 }
 
 .winner {
