--- a/src/SinglePlay/single.css
+++ b/src/SinglePlay/single.css
@@ -1,10 +1,15 @@
+body{
+  overflow-x: hidden;
+  overflow-y: hidden;
+  overflow: hidden;
+}
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
   font-family: Arial, sans-serif;
-  overflow: hidden; /* Add this line to prevent scrolling */
+  overflow: hidden; 
 }
 
 .message {
@@ -29,7 +34,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #0057b300;
 }
 
 .images {
@@ -42,14 +47,15 @@ button:hover {
 .player {
   flex-basis: 45%;
   text-align: center;
+  
 }
 
 .computer img,
 .player img {
   justify-content: space-around;
   max-width: 100%;
-  width: 200px; /* Adjust the desired size for the images */
-  height: 100px; /* Adjust the desired size for the images */
+  width: 200px;
+  height: 185px;
 }
 
 .box {
@@ -75,8 +81,8 @@ button:hover {
 }
 
 .button {
-  width: 40px;
-  height: 40px;
+  width: 38vh;
+  height: 9vh;
   margin: 0 5px;
   font-size: 18px;
   border-radius: 10%;
