--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,11 @@
 /* styles.css */
 
+body{
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+
 .background {
   background-image: url("./HomePage.png");
   background-repeat: no-repeat;
@@ -12,6 +18,7 @@
   height: 100vh;
   width: 50vh;
   background-color: #db5555;
+ 
 }
 
 
