--- a/src/SinglePlay/single.css
+++ b/src/SinglePlay/single.css
@@ -4,9 +4,10 @@ body{
   overflow: hidden;
   background-image: url("../images/HomePage.png");
 }
+
 .container {
-  display: flex;
-  flex-direction: column;
+  display: block;
+  flex-direction: row;
   align-items: center;
   padding: 20px;
   font-family: Arial, sans-serif;
@@ -24,18 +25,9 @@ body{
 }
 
 button {
-  padding: 10px 20px;
-  margin-right: 10px;
-  font-size: 16px;
-  background-color: #007bff;
-  color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-}
-
-button:hover {
-  background-color: #0057b300;
 }
 
 .images {
@@ -78,7 +70,9 @@ button:hover {
 
 .options {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  gap: 29px;
 }
 
 .button {
@@ -89,92 +83,37 @@ button:hover {
   border-radius: 10%;
 }
 
-.bttn1{
+.bttn{
   background-color: transparent;
-  background-image: url("../images/Player.png");
-  background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  bottom: 2.1vh;
-  height: 8vh;
-  width: 5vh;
-  
+  flex: 0 0 20%;
+  height: 7vh;
+  width: 10px;
 }
-.bttn2{
-  background-color: transparent;
-  background-image: url("../images/Player.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 8vh;
-  width: 5vh;
-  
+
+.bttn:nth-child(1) {
+  background-image: url("../images/1.png");
 }
-.bttn3{
-  background-color: transparent;
-  background-image: url("../images/Player.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 8vh;
-  width: 5vh;
-  
+
+.bttn:nth-child(2) {
+  background-image: url("../images/2.png");
 }
-.bttn4{
-  background-color: transparent;
-  background-image: url("../images/Player.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 8vh;
-  width: 5vh;
-  
+
+.bttn:nth-child(3) {
+  background-image: url("../images/3.png");
 }
-.bttn5{
-  background-color: transparent;
-  background-image: url("../images/Player.png");
-  background-repeat: no-repeat;
-  background-position: center ;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  
-  height: 8vh;
-  width: 5vh;
-  
+
+.bttn:nth-child(4) {
+  background-image: url("../images/4.png");
 }
-.bttn6{
-  background-color: transparent;
-  background-image: url("../images/Player.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 8vh;
-  width: 5vh;
-  
+
+.bttn:nth-child(5) {
+  background-image: url("../images/5.png");
+}
+
+.bttn:nth-child(6) {
+  background-image: url("../images/6.png");
 }
 
 .winner {
